--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
         </init-param>
         <init-param>
             <param-name>mname</param-name> 
-            <param-value>Ибрагимович</param-value> 
+            <param-value>Анатольевич</param-value> 
         </init-param>
     </servlet>
     <servlet-mapping>
